Fix right-toolbar toggle hover flicker
Fix https://gitlab.com/gitlab-org/gitter/webapp/issues/2430

--- a/public/js/views/righttoolbar/rightToolbarView.less
+++ b/public/js/views/righttoolbar/rightToolbarView.less
@@ -237,8 +237,6 @@
   bottom: 0;
   width: 100%;
   height: 70px;
-  padding-top: 21px;
-  padding-right: 21px;
 
   background: linear-gradient(top, rgba(255, 255, 255, 0), @main-application-bg-color 35%);
 
@@ -247,11 +245,14 @@
     display: inline-block;
     vertical-align: middle;
     margin: auto;
+    padding: 21px;
+
     fill: none;
     stroke: #8d8d8d;
     stroke-width: 2;
     cursor: pointer;
     transition: transform 0.2s ease;
+
     &:hover,
     .menu-toggle-button:hover > & {
       transform: translateZ(0) rotateZ(-90deg);
